added headings, background image, and css

--- a/index.html
+++ b/index.html
@@ -1,9 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+    <header>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="WebPortfolio_CSS">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Amarante&family=Lavishly+Yours&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Amarante&family=Lavishly+Yours&family=Lora:ital,wght@0,400..700;1,400..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <title>Personal Portfolio Webpage</title>
     <body>
+        <main>
+        <!--Navbar-->
+        <header id="navbar">
+            <nav id="nav-bar">
+                <ul>
+                    <li><a class="nav-link" href="#Projects">PROJECTS</a></li>
+                    <li><a class="nav-link" href="#About">ABOUT</a></li>
+                    <li><a class="nav-link" href="#Contact">CONTACT</a></li>
+                </ul>
+            </nav>
+            <h1 class="logo">with love, victoria</h1>
+        </header>
+
+        <!--Landing Page-->
+        <section id="welcome-section">
+            
+            
+        </section>
+
+        <!--Projects-->
+        <section id="projects">
+            <h1 class="project-title">Projects</h1>
+        </section>
+
+        <!--About Me-->
+        <section id="about-me">
+            <h1>About Victoria</h1>
+        </section>
+
+        <!--Socials-->
+        <section id="projects">
+            <h1>Let's keep the conversation going</h1>
+        </section>
+
+        <!--Footer-->
+    </main>
     </body>
 </html>
